--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Cássio Batista Pereira # name of the site
 author: Cássio Pereira # name of site's author
 email: cassio@cassiobp.com.br # email of site's author
-url: https://cassiodeveloper.com.br # root address of the site
+url: cassiodeveloper.com.br # root address of the site
 baseurl: "" # subpath of the site, e.g. "/blog" (leave it blank "" if you're site shouldn't use a subpath)
 description: > # description of the site (multiple lines allowed)
   Cássio Pereura Application Security Engineer - Ensino como construir software seguro
@@ -11,13 +11,13 @@ permalink: /:slug.html
 favicon: "logo.png" # name+extension of favicon (which must be put on the root folder)
 # goat_counter: "yoursitename" # put your GoatCounter name if you want to use GoatCounter analytics
 
-theme: no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
+theme: riggraz/no-style-please # if you are using GitHub Pages, change it to remote_theme: riggraz/no-style-please
 
 theme_config:
-  appearance: "dark" # can be "light", "dark" or "auto"
+  appearance: "auto" # can be "light", "dark" or "auto"
   back_home_text: ".." # customize text for homepage link in post layout
   date_format: "%Y-%m-%d" # customize how date is formatted
-  show_description: false # show blog description in home page
+  show_description: true # show blog description in home page
 
 sass:
   style: :compressed
