--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,35 +4,33 @@
 entries:
   - title: info
     entries:
-      - title: a (nearly) no-CSS, fast, minimalist Jekyll theme.
-      - title: github repo
-        url: https://github.com/riggraz/no-style-please
+      - title: Foco em Application Security, DevSecOps, S-SDLC e assuntos relativos a software seguro.
+      - title: all urls
+        url: https://linktr.ee/cassiodeveloper
       - title: "used by <a href='https://riggraz.dev'>riggraz.dev</a> and <a href='https://github.com/riggraz/no-style-please/network/dependents'>many others</a>"
 
-  - title: all posts
-    post_list:
-      limit: 5
-      show_more: true
-      show_more_text: See archive...
-      show_more_url: archive.html
+  # - title: all posts
+  #   post_list:
+  #     limit: 5
+  #     show_more: true
+  #     show_more_text: See archive...
+  #     show_more_url: archive.html
 
-  - title: posts by category
-    post_list:
-      category: example2
-      show_more: true
-      show_more_text: See more posts...
-      show_more_url: example2-archive.html
+  # - title: posts by category
+  #   post_list:
+  #     category: example2
+  #     show_more: true
+  #     show_more_text: See more posts...
+  #     show_more_url: example2-archive.html
 
-  - title: rss
-    url: feed.xml
+  - title: DevSecOps Podcast rss
+    url: https://www.spreaker.com/show/4179006/episodes/feed
   
-  - title: another list
+  - title: current projects
     entries:
-      - title: with subitems
+      - title: Commmunity
         entries:
-          - title: with subsubitems
-          - title: example page
-            url: about
-  - title: PRO TIP
-    entries:
-      - title: to edit this menu, edit _data/menu.yml file
+          - title: Security BSides Kraków
+            url: https://bsideskrakow.pl
+          - title: DevSecOps Podcast
+            url: https://linktr.ee/devsecopspodcast
