--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -7,7 +7,16 @@ entries:
       - title: Foco em Application Security, DevSecOps, S-SDLC e assuntos relativos a software seguro.
       - title: all urls
         url: https://linktr.ee/cassiodeveloper
-
+  - title: cursos
+    entries:
+      - title: Gratuitos
+        entries:
+          - title: Application Security Experience
+          - url: https://www.youtube.com/playlist?list=PLC2UsZBhySmJlih_ZOPHO6v60u0-NQ6I5
+      - title: Pagos
+        entries:
+          - title: Explicando, SAST
+            url: https://cassio.kpages.online/explicando-sast
   # - title: all posts
   #   post_list:
   #     limit: 5
@@ -33,3 +42,5 @@ entries:
             url: https://bsideskrakow.pl
           - title: DevSecOps Podcast
             url: https://linktr.ee/devsecopspodcast
+          - title: YouTube Channel
+            url: https://www.youtube.com/c/CassioBatistaPereira
