--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,6 +1,3 @@
-# For documentation on this file, see:
-# https://github.com/riggraz/no-style-please#customize-the-menu
-
 entries:
   - title: info
     entries:
@@ -12,7 +9,7 @@ entries:
       - title: Gratuitos
         entries:
           - title: Application Security Experience
-          - url: https://www.youtube.com/playlist?list=PLC2UsZBhySmJlih_ZOPHO6v60u0-NQ6I5
+            url: https://www.youtube.com/playlist?list=PLC2UsZBhySmJlih_ZOPHO6v60u0-NQ6I5
       - title: Pagos
         entries:
           - title: Explicando, SAST
@@ -30,10 +27,6 @@ entries:
   #     show_more: true
   #     show_more_text: See more posts...
   #     show_more_url: example2-archive.html
-
-  - title: DevSecOps Podcast rss
-    url: https://www.spreaker.com/show/4179006/episodes/feed
-  
   - title: current projects
     entries:
       - title: Commmunity
