--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -32,7 +32,7 @@ entries:
       - title: Comunidade
         entries:
           - title: Security BSides Kraków
-            url: https://bsideskrakow.pl
+            url: https://linktr.ee/bsideskrakow
           - title: DevSecOps Podcast
             url: https://linktr.ee/devsecopspodcast
           - title: YouTube Channel
