--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -20,6 +20,8 @@ entries:
     entries:
       - title: Livro - Explicando, Application Security
         url: https://cassiodeveloper.com.br/livro
+      - title: 101 Vulnerabilidades
+        url: https://github.com/cassiodeveloper/101-vulnerabilities  
       - title: Comunidade
         entries:
           - title: Security BSides Kraków
