--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -22,6 +22,8 @@ entries:
     entries:
       - title: Livro - Explicando, Application Security
         url: https://cassiodeveloper.com.br/livro
+      - title: Livro - AppSec Homem de Ferro
+        url: https://cassiodeveloper.com.br/AppSec - Homem de Ferro.pdf        
       - title: AppSec - Iron Man
         url: https://cassiodeveloper.com.br/AppSec-IronMan/
       - title: Produtos / Ferramentas
