--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -23,7 +23,7 @@ entries:
       - title: Livro - Explicando, Application Security
         url: https://cassiodeveloper.com.br/livro
       - title: Livro - AppSec Homem de Ferro
-        url: https://cassiodeveloper.com.br/AppSec - Homem de Ferro.pdf        
+        url: https://cassiodeveloper.com.br/assets/downloads/AppSec - Homem de Ferro.pdf        
       - title: AppSec - Iron Man
         url: https://cassiodeveloper.com.br/AppSec-IronMan/
       - title: Produtos / Ferramentas
